[gd_scene load_steps=10 format=3 uid="uid://dd4yx4ye55bwf"]

[ext_resource type="Texture2D" uid="uid://dym1ivtlsvpjd" path="res://Assets/menu_button_light.png" id="1_dvwpx"]
[ext_resource type="Script" path="res://combinationLock.gd" id="1_hggoc"]
[ext_resource type="Texture2D" uid="uid://b5xruj8go3atr" path="res://Assets/menu_button_dark.png" id="2_b71pu"]
[ext_resource type="Script" path="res://Lock 1 Display.gd" id="3_sh3fu"]
[ext_resource type="Script" path="res://Lock 2 Display.gd" id="4_vgwd2"]
[ext_resource type="Script" path="res://Lock 3 Display.gd" id="5_q35r6"]
[ext_resource type="Script" path="res://Lock 4 Display.gd" id="6_l7e48"]
[ext_resource type="Script" path="res://Lock 5 Display.gd" id="7_nl3yt"]

[sub_resource type="CanvasTexture" id="CanvasTexture_g6txe"]

[node name="combinationLock" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hggoc")

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color(0.0627451, 0.0627451, 0.0627451, 0.431373)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = SubResource("CanvasTexture_g6txe")

[node name="Lock 1" type="Control" parent="."]
anchors_preset = 0
offset_left = 64.0
offset_top = 256.0
offset_right = 320.0
offset_bottom = 832.0

[node name="UP" type="TextureButton" parent="Lock 1"]
top_level = true
layout_mode = 2
offset_left = 64.0
offset_top = 256.0
offset_right = 320.0
offset_bottom = 384.0
texture_normal = ExtResource("1_dvwpx")
texture_pressed = ExtResource("2_b71pu")
texture_hover = ExtResource("2_b71pu")
stretch_mode = 0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Lock 1/UP"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -41.5
offset_right = 60.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "▲"
horizontal_alignment = 1

[node name="DOWN" type="TextureButton" parent="Lock 1"]
top_level = true
layout_mode = 2
offset_left = 64.0
offset_top = 704.0
offset_right = 320.0
offset_bottom = 832.0
texture_normal = ExtResource("1_dvwpx")
texture_pressed = ExtResource("2_b71pu")
texture_hover = ExtResource("2_b71pu")
stretch_mode = 0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Lock 1/DOWN"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -41.5
offset_right = 60.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "▼"
horizontal_alignment = 1

[node name="Lock 1 Display" type="TextureRect" parent="Lock 1"]
layout_mode = 2
offset_top = 192.0
offset_right = 256.0
offset_bottom = 384.0
texture = ExtResource("1_dvwpx")
script = ExtResource("3_sh3fu")

[node name="Label" type="Label" parent="Lock 1/Lock 1 Display"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -41.5
offset_right = 60.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "1"
horizontal_alignment = 1

[node name="Lock 2" type="Control" parent="."]
anchors_preset = 0
offset_left = 448.0
offset_top = 256.0
offset_right = 704.0
offset_bottom = 832.0

[node name="UP" type="TextureButton" parent="Lock 2"]
top_level = true
layout_mode = 0
offset_left = 448.0
offset_top = 256.0
offset_right = 704.0
offset_bottom = 384.0
texture_normal = ExtResource("1_dvwpx")
texture_pressed = ExtResource("2_b71pu")
texture_hover = ExtResource("2_b71pu")
stretch_mode = 0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Lock 2/UP"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -41.5
offset_right = 60.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "▲"
horizontal_alignment = 1

[node name="DOWN" type="TextureButton" parent="Lock 2"]
top_level = true
layout_mode = 0
offset_left = 448.0
offset_top = 704.0
offset_right = 704.0
offset_bottom = 832.0
texture_normal = ExtResource("1_dvwpx")
texture_pressed = ExtResource("2_b71pu")
texture_hover = ExtResource("2_b71pu")
stretch_mode = 0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Lock 2/DOWN"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -41.5
offset_right = 60.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "▼"
horizontal_alignment = 1

[node name="Lock 2 Display" type="TextureRect" parent="Lock 2"]
layout_mode = 0
offset_top = 192.0
offset_right = 256.0
offset_bottom = 384.0
texture = ExtResource("1_dvwpx")
script = ExtResource("4_vgwd2")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Lock 2/Lock 2 Display"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -41.5
offset_right = 60.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "1"
horizontal_alignment = 1

[node name="Lock 3" type="Control" parent="."]
anchors_preset = 0
offset_left = 832.0
offset_top = 256.0
offset_right = 1088.0
offset_bottom = 832.0

[node name="UP" type="TextureButton" parent="Lock 3"]
top_level = true
layout_mode = 0
offset_left = 832.0
offset_top = 256.0
offset_right = 1088.0
offset_bottom = 384.0
texture_normal = ExtResource("1_dvwpx")
texture_pressed = ExtResource("2_b71pu")
texture_hover = ExtResource("2_b71pu")
stretch_mode = 0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Lock 3/UP"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -41.5
offset_right = 60.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "▲"
horizontal_alignment = 1

[node name="DOWN" type="TextureButton" parent="Lock 3"]
top_level = true
layout_mode = 0
offset_left = 832.0
offset_top = 704.0
offset_right = 1088.0
offset_bottom = 832.0
texture_normal = ExtResource("1_dvwpx")
texture_pressed = ExtResource("2_b71pu")
texture_hover = ExtResource("2_b71pu")
stretch_mode = 0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Lock 3/DOWN"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -41.5
offset_right = 60.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "▼"
horizontal_alignment = 1

[node name="Lock 3 Display" type="TextureRect" parent="Lock 3"]
layout_mode = 0
offset_top = 192.0
offset_right = 256.0
offset_bottom = 384.0
texture = ExtResource("1_dvwpx")
script = ExtResource("5_q35r6")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Lock 3/Lock 3 Display"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -41.5
offset_right = 60.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "1"
horizontal_alignment = 1

[node name="Lock 4" type="Control" parent="."]
anchors_preset = 0
offset_left = 1216.0
offset_top = 256.0
offset_right = 1472.0
offset_bottom = 832.0

[node name="UP" type="TextureButton" parent="Lock 4"]
top_level = true
layout_mode = 0
offset_left = 1216.0
offset_top = 256.0
offset_right = 1472.0
offset_bottom = 384.0
texture_normal = ExtResource("1_dvwpx")
texture_pressed = ExtResource("2_b71pu")
texture_hover = ExtResource("2_b71pu")
stretch_mode = 0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Lock 4/UP"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -41.5
offset_right = 60.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "▲"
horizontal_alignment = 1

[node name="DOWN" type="TextureButton" parent="Lock 4"]
top_level = true
layout_mode = 0
offset_left = 1216.0
offset_top = 704.0
offset_right = 1472.0
offset_bottom = 832.0
texture_normal = ExtResource("1_dvwpx")
texture_pressed = ExtResource("2_b71pu")
texture_hover = ExtResource("2_b71pu")
stretch_mode = 0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Lock 4/DOWN"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -41.5
offset_right = 60.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "▼"
horizontal_alignment = 1

[node name="Lock 4 Display" type="TextureRect" parent="Lock 4"]
layout_mode = 0
offset_top = 192.0
offset_right = 256.0
offset_bottom = 384.0
texture = ExtResource("1_dvwpx")
script = ExtResource("6_l7e48")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Lock 4/Lock 4 Display"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -41.5
offset_right = 60.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "1"
horizontal_alignment = 1

[node name="Lock 5" type="Control" parent="."]
anchors_preset = 0
offset_left = 1600.0
offset_top = 256.0
offset_right = 1856.0
offset_bottom = 832.0

[node name="UP" type="TextureButton" parent="Lock 5"]
top_level = true
layout_mode = 0
offset_left = 1600.0
offset_top = 256.0
offset_right = 1856.0
offset_bottom = 384.0
texture_normal = ExtResource("1_dvwpx")
texture_pressed = ExtResource("2_b71pu")
texture_hover = ExtResource("2_b71pu")
stretch_mode = 0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Lock 5/UP"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -41.5
offset_right = 60.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "▲"
horizontal_alignment = 1

[node name="DOWN" type="TextureButton" parent="Lock 5"]
top_level = true
layout_mode = 0
offset_left = 1600.0
offset_top = 704.0
offset_right = 1856.0
offset_bottom = 832.0
texture_normal = ExtResource("1_dvwpx")
texture_pressed = ExtResource("2_b71pu")
texture_hover = ExtResource("2_b71pu")
stretch_mode = 0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Lock 5/DOWN"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -41.5
offset_right = 60.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "▼"
horizontal_alignment = 1

[node name="Lock 5 Display" type="TextureRect" parent="Lock 5"]
layout_mode = 0
offset_top = 192.0
offset_right = 256.0
offset_bottom = 384.0
texture = ExtResource("1_dvwpx")
script = ExtResource("7_nl3yt")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Lock 5/Lock 5 Display"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -41.5
offset_right = 60.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "1"
horizontal_alignment = 1

[connection signal="pressed" from="Lock 1/UP" to="Lock 1/Lock 1 Display" method="_on_up_pressed"]
[connection signal="pressed" from="Lock 1/DOWN" to="Lock 1/Lock 1 Display" method="_on_down_pressed"]
[connection signal="numberChange" from="Lock 1/Lock 1 Display" to="." method="_on_lock_1_display_number_change"]
[connection signal="pressed" from="Lock 2/UP" to="Lock 2/Lock 2 Display" method="_on_up_pressed"]
[connection signal="pressed" from="Lock 2/DOWN" to="Lock 2/Lock 2 Display" method="_on_down_pressed"]
[connection signal="numberChange" from="Lock 2/Lock 2 Display" to="." method="_on_lock_2_display_number_change"]
[connection signal="pressed" from="Lock 3/UP" to="Lock 3/Lock 3 Display" method="_on_up_pressed"]
[connection signal="pressed" from="Lock 3/DOWN" to="Lock 3/Lock 3 Display" method="_on_down_pressed"]
[connection signal="numberChange" from="Lock 3/Lock 3 Display" to="." method="_on_lock_3_display_number_change"]
[connection signal="pressed" from="Lock 4/UP" to="Lock 4/Lock 4 Display" method="_on_up_pressed"]
[connection signal="pressed" from="Lock 4/DOWN" to="Lock 4/Lock 4 Display" method="_on_down_pressed"]
[connection signal="numberChange" from="Lock 4/Lock 4 Display" to="." method="_on_lock_4_display_number_change"]
[connection signal="pressed" from="Lock 5/UP" to="Lock 5/Lock 5 Display" method="_on_up_pressed"]
[connection signal="pressed" from="Lock 5/DOWN" to="Lock 5/Lock 5 Display" method="_on_down_pressed"]
[connection signal="numberChange" from="Lock 5/Lock 5 Display" to="." method="_on_lock_5_display_number_change"]
